Spliting Dataset and Feature selection

--- a/notebooks/Task2_Split_data.ipynb
+++ b/notebooks/Task2_Split_data.ipynb
@@ -10,7 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "ef7e2bce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import train_test_split\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d05b23fa",
    "metadata": {},
    "outputs": [
@@ -290,7 +301,7 @@
     }
    ],
    "source": [
-    "# Cell 1: load processed data and inspect\n",
+    "# load processed data and inspect\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "SEED = 42\n",
@@ -307,6 +318,144 @@
     "print(\"\\nTarget distribution (Churn):\\n\", df['Churn'].value_counts(dropna=False), \"\\n\")\n",
     "print(\"Unique values in target:\", df['Churn'].unique())\n",
     "print(\"Duplicate rows:\", df.duplicated().sum())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "570550fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Descriptive Statistics:\n",
+      "             gender  SeniorCitizen      Partner   Dependents       tenure  \\\n",
+      "count  7032.000000    7032.000000  7032.000000  7032.000000  7032.000000   \n",
+      "mean      0.504693       0.162400     0.482509     0.298493    32.421786   \n",
+      "std       0.500014       0.368844     0.499729     0.457629    24.545260   \n",
+      "min       0.000000       0.000000     0.000000     0.000000     1.000000   \n",
+      "25%       0.000000       0.000000     0.000000     0.000000     9.000000   \n",
+      "50%       1.000000       0.000000     0.000000     0.000000    29.000000   \n",
+      "75%       1.000000       0.000000     1.000000     1.000000    55.000000   \n",
+      "max       1.000000       1.000000     1.000000     1.000000    72.000000   \n",
+      "\n",
+      "       PhoneService  PaperlessBilling  MonthlyCharges  TotalCharges  \\\n",
+      "count   7032.000000       7032.000000     7032.000000   7032.000000   \n",
+      "mean       0.903299          0.592719       64.798208   2283.300441   \n",
+      "std        0.295571          0.491363       30.085974   2266.771362   \n",
+      "min        0.000000          0.000000       18.250000     18.800000   \n",
+      "25%        1.000000          0.000000       35.587500    401.450000   \n",
+      "50%        1.000000          1.000000       70.350000   1397.475000   \n",
+      "75%        1.000000          1.000000       89.862500   3794.737500   \n",
+      "max        1.000000          1.000000      118.750000   8684.800000   \n",
+      "\n",
+      "             Churn  \n",
+      "count  7032.000000  \n",
+      "mean      0.265785  \n",
+      "std       0.441782  \n",
+      "min       0.000000  \n",
+      "25%       0.000000  \n",
+      "50%       0.000000  \n",
+      "75%       1.000000  \n",
+      "max       1.000000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nDescriptive Statistics:\\n\", df.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e7e5b951",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicate rows after removal: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cell 6: Remove duplicate rows\n",
+    "df = df.drop_duplicates()\n",
+    "print(\"Duplicate rows after removal:\", df.duplicated().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c0004d98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell 7: One-hot encoding for categorical variables\n",
+    "df_encoded = pd.get_dummies(df, drop_first=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d04f3ee8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell 8: Prepare features and target variable after encoding\n",
+    "X = df_encoded.drop(columns=['Churn'])  # Features\n",
+    "y = df_encoded['Churn']  # Target variable\n",
+    "\n",
+    "# Split the data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=SEED, stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1f4751f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set target distribution (Churn):\n",
+      " Churn\n",
+      "0    0.735021\n",
+      "1    0.264979\n",
+      "Name: proportion, dtype: float64\n",
+      "\n",
+      "Testing set target distribution (Churn):\n",
+      " Churn\n",
+      "0    0.735378\n",
+      "1    0.264622\n",
+      "Name: proportion, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cell 9: Check target distribution in training and testing sets\n",
+    "print(\"Training set target distribution (Churn):\\n\", y_train.value_counts(normalize=True))\n",
+    "print(\"\\nTesting set target distribution (Churn):\\n\", y_test.value_counts(normalize=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "49813f22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell to save features and target\n",
+    "X_train.to_csv(\"../data/processed/X_train.csv\", index=False)\n",
+    "X_test.to_csv(\"../data/processed/X_test.csv\", index=False)\n",
+    "y_train.to_csv(\"../data/processed/y_train.csv\", index=False)\n",
+    "y_test.to_csv(\"../data/processed/y_test.csv\", index=False)"
    ]
   }
  ],
