Completed Feature and model selection

--- a/notebooks/Task3_Feature_selection.ipynb
+++ b/notebooks/Task3_Feature_selection.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "32bd79a7",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d3bc3d58",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0979818e",
    "metadata": {},
    "outputs": [
@@ -70,6 +70,55 @@
     "selected_features = X_train.columns[selector.get_support()]\n",
     "\n",
     "print(\"Selected features:\", selected_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0fac2fe9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Selected features saved successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "joblib.dump(selected_features.tolist(), \"../models/selected_features.pkl\")\n",
+    "print(\"✅ Selected features saved successfully!\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6578447",
+   "metadata": {},
+   "source": [
+    "## 🧩 Task 3 Summary – Feature Selection\n",
+    "\n",
+    "**Goal:** Identify the most relevant features that contribute to customer churn.\n",
+    "\n",
+    "**Method Used:** ANOVA F-test using `SelectKBest` with `f_classif` (k=10).\n",
+    "\n",
+    "**Selected Features:**\n",
+    "- tenure  \n",
+    "- InternetService_Fiber optic  \n",
+    "- OnlineSecurity_No internet service  \n",
+    "- OnlineBackup_No internet service  \n",
+    "- DeviceProtection_No internet service  \n",
+    "- TechSupport_No internet service  \n",
+    "- StreamingTV_No internet service  \n",
+    "- StreamingMovies_No internet service  \n",
+    "- Contract_Two year  \n",
+    "- PaymentMethod_Electronic check  \n",
+    "\n",
+    "**Outcome:**  \n",
+    "Reduced the dataset to the top 10 features most correlated with churn.  \n",
+    "These features will be used for model selection and training in Task 4.\n"
    ]
   }
  ],
